# Open3D

./: .gitignore  .gitmodules  CMakeLists.txt  arrayfire_demo.ipynb  demo.py  header_rename.py  pybind_demo.ipynb  tensor_api.ipynb  tensor_api_cpp.ipynb  tensor_benchmark.ipynb
examples/AdvancedRendering/: CMakeLists.txt  GenSphere.cpp  GenSpherePLY.cpp  GenSpherePLYfromOBJ.cpp  IBLTexMap.cpp  IBLTextureMap.cpp  IBLVertexMap.cpp  IBLVertexMapRealScene.cpp  RunSynthetic.cpp  SpotLightTexMap.cpp  SpotTexureMap.cpp  UVBackward.cpp  UVBackwardFountain.cpp  UVBackwardTexMap.cpp  UVForward.cpp  UVForwardFountain.cpp  UVForwardTexMap.cpp  UVTexMap.cpp  VisualizeMerlBRDF.cpp  VisualizerDR.cpp  Warping.cpp  data_path.h
examples/AdvancedRendering/ReconstructionSystem/: CMakeLists.txt  RenderScene.h  RunInverseRendering.cpp
examples/Cuda/: CMakeLists.txt  ColoredICP.cpp  ColoredICPCuda.cpp  ColoredICPCudaForFragment.cpp  ColoredICPCudaForRGBD.cpp  CompareRGBDOdometry.cpp  DatasetConfig.h  FPFHFeatureCuda.cpp  FastGlobalRegistration.cpp  FastGlobalRegistrationCuda.cpp  Features.cpp  ICP.cpp  ICPCuda.cpp  NNMatching.cpp  ProfileRGBDOdometryCuda.cpp  RGBDOdometryCuda.cpp  RGBDOdometryCudaVisualizer.cpp  ReadDataAssociation.h  ScalableFusionSystemCuda.cpp  ScalableSingleFrameMeshingCuda.cpp  SequentialRGBDOdometry.cpp  SequentialRGBDOdometryCuda.cpp  TwoFrameRGBDOdometryCuda.cpp  UniformFusionSystemCuda.cpp  UniformSingleFrameMeshingCuda.cpp  Utils.h  VisualizeSingleFrameMeshingCuda.cpp  VisualizeSingleFramePointCloudCuda.cpp  VisualizeTwoDepthFrames.cpp  VisualizeTwoFrameICRGBDOdometryCuda.cpp  VisualizeTwoFrameRGBDOdometry.cpp  VisualizeTwoFrameRGBDOdometryCuda.cpp  VisualizerSingleFrameCuda.cpp  associate_stanford.py  associate_tum.py  losses_log.py  plot_curve.py  preprocess_tum.py  process_losses_log.py  process_traj_log.py
examples/Cuda/Demo/: CMakeLists.txt  ColoredICPCudaForFragment.cpp  ColoredICPCudaForRGBD.cpp  ColoredICPCudaVisualizer.cpp  CompareRGBDOdometry.cpp  FGRCudaVisualizer.cpp  FPFHFeatureCuda.cpp  FastGlobalRegistrationCuda.cpp  ICPCuda.cpp  ProfileRGBDOdometryCuda.cpp  RGBDOdometryCuda.cpp  RGBDOdometryCudaVisualizer.cpp  RefactoredRegistration.cpp  RegistrationCudaForPointClouds.cpp  RegistrationCudaForRGBD.cpp  ScalableFusionCuda.cpp  ScalableFusionSystemCuda.cpp  UniformFusionCuda.cpp  UniformFusionSystemCuda.cpp  Utils.h
examples/Cuda/Experiment/: CMakeLists.txt  DownsampleTSDFVolumeCuda.cpp  ExtractVoxelsNearSurfaceCuda.cpp  LoadTSDFCuda.cpp  RegisterTSDFVolumesCuda.cpp  VolumeRenderingCuda.cpp  WriteAndReadTSDFVolumeCuda.cpp
examples/Cuda/Profile/: CMakeLists.txt  ProfileColoredICP.cpp  ProfileFGR.cpp  ProfileIntegration.cpp  ProfileMarchingCubes.cpp  ProfileRGBDOdometry.cpp  RGBDOdometryCudaProfiler.cpp  VisualizeModels.cpp  draw_mc_time.py  draw_reduction_time.py  draw_system_runtime.py  run.sh
examples/Cuda/ReconstructionSystem/: CMakeLists.txt  DatasetConfig.h  DebugICPOdometry.cpp  DebugRGBDOdometry.cpp  IntegrateScene.cpp  IntegrateScene.h  MakeFragments.cpp  MakeFragments.h  ORBPoseEstimation.h  OptimizePoseGraph.cpp  README.txt  RefineRegistration.cpp  RefineRegistration.h  RegisterFragments.cpp  RegisterFragments.h  RegisterFragmentsWithOdometry.cpp  RegisterFragmentsWithReloc.cpp  RunSystem.cpp  System.h  TestCVFunctions.cpp  ViewFragments.cpp  ViewPoseGraph.cpp  ViewPoses.cpp  config.json  livingroom2.txt  run.sh
examples/InverseRendering/: CMakeLists.txt  DifferentiableRendering.cpp  GenSphere.cpp  IBLNoTexShading.cpp  IBLRealPly.cpp  IBLShading.cpp  IBLTexMap.cpp  IBLVertexMap.cpp  IBLVertexMapRealScene.cpp  InverseRenderingSynthetic.cpp  NoIBLShading.cpp  RunSynthetic.cpp  SpotLightShading.cpp  SpotLightTexMap.cpp  TestHDR.cpp  UVTexMap.cpp  VisualizeMerlBRDF.cpp  VisualizeSphere.cpp  VisualizerDR.cpp
examples/InverseRendering/ReconstructionSystem/: CMakeLists.txt  DatasetConfig.h  RenderScene.h  RunInverseRendering.cpp
src/: CMakeLists.txt  header_rename.py
src/AdvancedRendering/: CMakeLists.txt
src/AdvancedRendering/Geometry/: ExtendedTriangleMesh.h  ImageExt.cpp  ImageExt.h  Lighting.h  TexturedTriangleMesh.cpp  TexturedTriangleMesh.h
src/AdvancedRendering/Optimization/: DataAssociation.h  PhotometricBA.cpp
src/Core/ColorMap/: ColorMapOptimization.cpp  ColorMapOptimization.h  ColorMapOptimizationJacobian.cpp  TriangleMeshAndImageUtilities.cpp  TriangleMeshAndImageUtilities.h
src/Core/Geometry/: Geometry.h  Image.cpp
src/Core/Odometry/: RGBDOdometryJacobian.cpp
src/Cuda/: CMakeLists.txt  Core.h  Open3DCuda.h  README.md
src/Cuda/Camera/: PinholeCameraIntrinsicCuda.h  PinholeCameraTrajectoryCuda.h
src/Cuda/Common/: AtomicCuda.h  Common.h  HelperCuda.h  HelperMath.h  HelperString.h  JacobianCuda.h  LinearAlgebraCuda.h  MatrixCuda.h  Palatte.h  ReductionCuda.h  TransformCuda.h  TypeConversion.h  UtilsCuda.cu  UtilsCuda.h  VectorCuda.h
src/Cuda/Container/: Array2DCuda.h  Array2DCudaDevice.cuh  Array2DCudaHost.hpp  ArrayCuda.cuh  ArrayCuda.h  ArrayCudaDevice.cuh  ArrayCudaHost.hpp  ArrayCudaKernel.cuh  ContainerClasses.h  HashTableCuda.cuh  HashTableCuda.h  HashTableCudaDevice.cuh  HashTableCudaHost.hpp  HashTableCudaKernel.cu  HashTableCudaKernel.cuh  InstantiateContainers.cpp  InstantiateContainers.cu  LinkedListCuda.cuh  LinkedListCuda.h  LinkedListCudaDevice.cuh  LinkedListCudaHost.hpp  LinkedListCudaKernel.cu  LinkedListCudaKernel.cuh  MatrixCuda.h  MatrixCudaDevice.cuh  MatrixCudaHost.hpp  MatrixCudaKernel.cuh  MemoryHeapCuda.cuh  (+5 more)
src/InverseRendering/: CMakeLists.txt
src/Material/: CMakeLists.txt
src/Open3D/: CMakeLists.txt  Open3D.h  Open3DConfig.cmake.in  Open3DConfig.cpp
src/Python/: CMakeLists.txt  docstring.cpp  docstring.h  open3d_pybind.cpp  open3d_pybind.h
src/Test/: CMakeLists.txt  TestCudaContainer.cpp  TestCudaImage.cpp  TestCudaRGBDOdometry.cpp  TestCudaReduction2D.cpp  TestCudaTransform.cpp
src/Tools/: CMakeLists.txt  ConvertPointCloud.cpp  EncodeShader.cpp  ManuallyCropGeometry.cpp  MergeMesh.cpp  ViewGeometry.cpp
src/UnitTest/: CMakeLists.txt  main.cpp
src/Visualization/: CMakeLists.txt
(+1062 files in other folders)
