macro(EXAMPLE_CPP EXAMPLE_CPP_NAME)
    add_executable(${EXAMPLE_CPP_NAME} "${EXAMPLE_CPP_NAME}.cpp")

    set(DEPENDENCIES "${ARGN}")
    foreach(DEPENDENCY IN LISTS DEPENDENCIES)
        target_link_libraries(${EXAMPLE_CPP_NAME} ${DEPENDENCY})
    endforeach()

    set_target_properties(${EXAMPLE_CPP_NAME} PROPERTIES
            FOLDER "examples/Cuda/"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples")
endmacro(EXAMPLE_CPP)

find_package(OpenCV REQUIRED)
list(APPEND 3RDPARTY_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS})
list(APPEND 3RDPARTY_LIBRARIES ${OpenCV_LIBS})
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${3RDPARTY_INCLUDE_DIRS})
link_directories(${3RDPARTY_LIBRARY_DIRS})

EXAMPLE_CPP(GenSphere         ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE} ${OpenCV_LIBS})
EXAMPLE_CPP(VisualizeMerlBRDF ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})

EXAMPLE_CPP(SpotLightTexMap       ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})
EXAMPLE_CPP(IBLTexMap             ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})
EXAMPLE_CPP(IBLVertexMap          ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})
EXAMPLE_CPP(IBLVertexMapRealScene ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})

EXAMPLE_CPP(VisualizerDR          ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})
EXAMPLE_CPP(RunSynthetic          ${CMAKE_PROJECT_NAME} ${OPEN3D_MATERIAL_MODULE})

add_subdirectory(ReconstructionSystem)
